fix korrel8r pipeline
We were missing an s in a pipeline leading to build failures.

Signed-off-by: Jan Fajerski <jfajersk@redhat.com>

--- a/.tekton/korrel8r-push.yaml
+++ b/.tekton/korrel8r-push.yaml
@@ -56,7 +56,7 @@ spec:
           value: quay.io/konflux-ci/tekton-catalog/task-show-sbom:0.1@sha256:945a7c9066d3e0a95d3fddb7e8a6992e4d632a2a75d8f3a9bd2ff2fef0ec9aa0
         - name: kind
           value: task
-        resolver: bundle
+        resolver: bundles
     - name: show-summary
       params:
       - name: pipelinerun-name
