Build fbc catalog only on change in pipelines.
This commit modifies the trigger for the catalog build so it applies
only when there's a change in the actual catalog in order to avoid
having it rebuilt on every commit.

Note that this would mean stopping seeing this in every regular commit
CI, but that wasn't a real update but a rebuilt.  Currently there's no
automation in place to have the catalogs updated per commit in the CI.

Signed-off-by: Daniel Mellado <dmellado@fedoraproject.org>

--- a/.tekton/coo-fbc-v4-12-pull-request.yaml
+++ b/.tekton/coo-fbc-v4-12-pull-request.yaml
@@ -7,8 +7,11 @@ metadata:
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" &&
+      (".tekton/coo-fbc-v4-12-pull-request.yaml".pathChanged() ||
+      ".tekton/coo-fbc-v4-12-push.yaml".pathChanged() ||
+      "Dockerfile-4.12.catalog".pathChanged() ||
+      "catalog/***".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coo-fbc-v4-12
