--- a/.tekton/coo-fbc-v4-13-pull-request.yaml
+++ b/.tekton/coo-fbc-v4-13-pull-request.yaml
@@ -7,8 +7,11 @@ metadata:
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" &&
+      (".tekton/coo-fbc-v4-13-pull-request.yaml".pathChanged() ||
+      ".tekton/coo-fbc-v4-13-push.yaml".pathChanged() ||
+      "Dockerfile-4.13.catalog".pathChanged() ||
+      "catalog/***".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coo-fbc-v4-13
@@ -201,7 +204,7 @@ spec:
         - name: PLATFORM
           value:
           - $(params.build-platforms)
-      name: build-images 
+      name: build-images
       params:
       - name: IMAGE
         value: $(params.output-image)
