--- a/.tekton/coo-fbc-v4-14-pull-request.yaml
+++ b/.tekton/coo-fbc-v4-14-pull-request.yaml
@@ -7,8 +7,11 @@ metadata:
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch
-      == "main"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" &&
+      (".tekton/coo-fbc-v4-14-pull-request.yaml".pathChanged() ||
+      ".tekton/coo-fbc-v4-14-push.yaml".pathChanged() ||
+      "Dockerfile-4.14.catalog".pathChanged() ||
+      "catalog/***".pathChanged())
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coo-fbc-v4-14
@@ -135,7 +138,7 @@ spec:
       description: List of platforms to build the container images on. The available
         set of values is determined by the configuration of the multi-platform-controller.
       name: build-platforms
-      type: array 
+      type: array
     results:
     - description: ""
       name: IMAGE_URL
@@ -176,7 +179,7 @@ spec:
       - name: ociStorage
         value: $(params.output-image).git
       - name: ociArtifactExpiresAfter
-        value: $(params.image-expires-after) 
+        value: $(params.image-expires-after)
       runAfter:
       - init
       taskRef:
@@ -218,7 +221,7 @@ spec:
       - name: SOURCE_ARTIFACT
         value: $(tasks.clone-repository.results.SOURCE_ARTIFACT)
       - name: IMAGE_APPEND_PLATFORM
-        value: "true"  
+        value: "true"
       runAfter:
       - clone-repository
       taskRef:
