--- a/.tekton/coo-fbc-v4-15-push.yaml
+++ b/.tekton/coo-fbc-v4-15-push.yaml
@@ -8,7 +8,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
       (".tekton/coo-fbc-v4-15-pull-request.yaml".pathChanged() ||
-      (".tekton/coo-fbc-v4-15-push.yaml".pathChanged() ||
+      ".tekton/coo-fbc-v4-15-push.yaml".pathChanged() ||
       "Dockerfile-4.15.catalog".pathChanged() ||
       "catalog/***".pathChanged())
   creationTimestamp: null
