--- a/.tekton/coo-fbc-v4-17-push.yaml
+++ b/.tekton/coo-fbc-v4-17-push.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
       (".tekton/coo-fbc-v4-17-pull-request.yaml".pathChanged() ||
-      (".tekton/coo-fbc-v4-17-push.yaml".pathChanged() ||
+      ".tekton/coo-fbc-v4-17-push.yaml".pathChanged() ||
       "Dockerfile-4.17.catalog".pathChanged() ||
       "catalog/***".pathChanged())
   creationTimestamp: null
