--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,10 @@
     "extends": [
         "github>konflux-ci/mintmaker//config/renovate/renovate.json"
     ],
+    "ignoreDeps": [
+        "registry.redhat.io/openshift4/ose-operator-registry",
+        "registry.redhat.io/openshift4/ose-operator-registry-rhel9"
+    ],
     "dockerfile": {
         "fileMatch": ["^Dockerfile\\.[a-zA-Z0-9\\.-]+$"]
     }
