--- a/.github/workflows/pr-checks.yaml
+++ b/.github/workflows/pr-checks.yaml
@@ -9,3 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: make --always-make generate && git diff --exit-code
+  lint:
+    name: Run linters
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: make --always-make lint
