--- a/.gitmodules
+++ b/.gitmodules
@@ -35,8 +35,8 @@
 	branch = release-coo-1.0
 [submodule "thanos"]
 	path = thanos
-	url = https://github.com/thanos-io/thanos.git
-        branch = release-0.36
+	url = https://github.com/openshift/thanos/thanos.git
+        branch = release-4.18
 [submodule "korrel8r"]
         path = korrel8r
         url = https://github.com/korrel8r/korrel8r.git
