--- a/.tekton/cluster-observability-operator-container-push.yaml
+++ b/.tekton/cluster-observability-operator-container-push.yaml
@@ -31,6 +31,8 @@ spec:
     value:
     - linux/x86_64
     - linux/arm64
+    - linux/ppc64le
+    - linux/s390x
   - name: dockerfile
     value: Dockerfile.obo
   - name: path-context
