--- a/.tekton/prometheus-pull-request.yaml
+++ b/.tekton/prometheus-pull-request.yaml
@@ -34,6 +34,8 @@ spec:
     value:
     - linux/x86_64
     - linux/arm64
+    - linux/ppc64le
+    - linux/s390x
   - name: dockerfile
     value: Dockerfile.prometheus
   - name: path-context
