--- a/Dockerfile-4.18.catalog
+++ b/Dockerfile-4.18.catalog
@@ -1,10 +1,11 @@
 # The base image is expected to contain /bin/opm (with a serve subcommand) and /bin/grpc_health_probe
-FROM registry.redhat.io/openshift4/ose-operator-registry:v4.13
+FROM registry.redhat.io/openshift4/ose-operator-registry-rhel9:v4.18
+
 
 ENTRYPOINT ["/bin/opm"]
 CMD ["serve", "/configs", "--cache-dir=/tmp/cache"]
 
-COPY catalog/coo-product-4.17 /configs/cluster-observability-operator
+COPY catalog/coo-product /configs/cluster-observability-operator
 
 RUN ["/bin/opm", "serve", "/configs", "--cache-dir=/tmp/cache", "--cache-only"]
 
