--- a/Dockerfile-4.18.catalog
+++ b/Dockerfile-4.18.catalog
@@ -1,5 +1,6 @@
 # The base image is expected to contain /bin/opm (with a serve subcommand) and /bin/grpc_health_probe
-FROM registry.redhat.io/openshift4/ose-operator-registry-rhel9:v4.18
+# TODO migrate to this once available FROM registry.redhat.io/openshift4/ose-operator-registry-rhel9:v4.18
+FROM brew.registry.redhat.io/rh-osbs/openshift-ose-operator-registry-rhel9:v4.18
 
 
 ENTRYPOINT ["/bin/opm"]
